[package]
name = "conversia"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "standard_framework"] }
poise = "0.6.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
tempfile = "3.6"
image = "0.24"
zip = "4.0.0"