[package]
name = "conversia"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "standard_framework"] }
poise = "0.6.1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
dotenv = "0.15"
tempfile = "3.6"
image = "0.24"
zip = "4.0.0"
id3 = "1.16.3"
metaflac = "0.2.8"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
zstd = "0.11"
lz4 = "1.24"
aes = "0.8"
age = "0.11.1"
secrecy = "0.10.3"
pandoc = "0.8.11"
sha2 = "0.10.9"
sha1 = "0.10.6"
md5 = "0.7.0"
blake3 = "1.8.2"
